# syntax-regex-matcher

./: README.md  TODO.md  pyproject.toml
src/srm/: __init__.py  matcher.py
