[build-system]
requires = [
    "setuptools >= 65", 
    "wheel >= 0.38",
    "setuptools-scm"
    ]
build-backend = "setuptools.build_meta"

[project]
name = "srm"
version = "0.1.0"
description=""
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE.md"}
#urls = {source = "https://github.com/iarpa-hiatus/eric-gram2vec"} #! will need to be updated
dependencies = [
    "spacy",
]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",        
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    ]

[tool.setuptools.package-data]
"*" = [ "*.txt"]